# snrub.api

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/controllers/: incident_category.py  user.py
app/controllers/auth/: local.py  password_reset.py
app/db/: crud_base.py  database.py
app/models/: auth.py  incident_category.py  password_reset.py  user.py
app/routes/: incident_category.py  user.py
app/routes/auth/: google.py  local.py
app/security/: auth_bearer.py  authorization.py  jwt.py  oauth_client.py
app/services/: image_processing.py
migrations/: env.py
migrations/versions/: 4a224cf58d80_add_incident_categories_table.py  5651397b89d0_add_user_status_and_photo.py  5c4077aa9ca8_seed_initial_data.py
scripts/: dump-db.sh  start-dev.sh
seeds/: __main__.py  seed_runner.py  snrub-seed.sql
seeds/data/: incident_categories.py  incident_types.py  users.py
tests/: conftest.py
tests/integration/: conftest.py  test_incident_category.py  test_password_reset.py  test_user_crud.py
tests/unit/helpers/: test_jwt.py  test_user.py
tests/unit/services/: test_image_processing.py
