[project]
name = "mot-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.4.0",
    "pyjwt>=2.10.1",
    "fastapi-mail>=1.4.2",
    "authlib>=1.6.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "scalar-fastapi>=1.6.1",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "mimesis>=19.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
